// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelView Component should display an alternate graph on query-string update: alternate graph 1`] = `
<PageLayout>
  <PageHeader
    t={[Function]}
    viewId="RHEL"
  >
    t(curiosity-view.title, [object Object])
  </PageHeader>
  <PageToolbar>
    <Connect(Toolbar)
      query={
        Object {
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
        }
      }
      viewId="RHEL"
    />
  </PageToolbar>
  <PageSection>
    <Connect(C3GraphCard)
      cardTitle="t(curiosity-graph.socketsHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "color": "#5752d1",
            "fill": "#b2b0ea",
            "id": "cloudSockets",
            "stroke": "#5752d1",
          },
          Object {
            "id": "thresholdSockets",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="RHEL"
      query={
        Object {
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
        }
      }
      viewId="RHEL"
    />
  </PageSection>
  <PageSection>
    <Connect(InventoryList)
      cardTitle="t(curiosity-inventory.cardHeading)"
      filterInventoryData={
        Array [
          Object {
            "cell": [Function],
            "id": "displayName",
          },
          Object {
            "cell": [Function],
            "id": "hardwareType",
          },
          Object {
            "id": "sockets",
          },
          Object {
            "id": "lastSeen",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      query={
        Object {
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
        }
      }
      viewId="RHEL"
    />
  </PageSection>
</PageLayout>
`;

exports[`RhelView Component should have a fallback title: title 1`] = `
<PageLayout>
  <PageHeader
    t={[Function]}
    viewId="RHEL"
  >
    t(curiosity-view.title, [object Object])
  </PageHeader>
  <PageToolbar>
    <Connect(Toolbar)
      query={
        Object {
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
        }
      }
      viewId="RHEL"
    />
  </PageToolbar>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.socketsHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "color": "#5752d1",
            "fill": "#b2b0ea",
            "id": "cloudSockets",
            "stroke": "#5752d1",
          },
          Object {
            "id": "thresholdSockets",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="RHEL"
      query={
        Object {
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
        }
      }
      viewId="RHEL"
    />
  </PageSection>
  <PageSection>
    <Connect(InventoryList)
      cardTitle="t(curiosity-inventory.cardHeading)"
      filterInventoryData={
        Array [
          Object {
            "cell": [Function],
            "id": "displayName",
          },
          Object {
            "cell": [Function],
            "id": "hardwareType",
          },
          Object {
            "id": "sockets",
          },
          Object {
            "id": "lastSeen",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      query={
        Object {
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
        }
      }
      viewId="RHEL"
    />
  </PageSection>
</PageLayout>
`;

exports[`RhelView Component should have default props that set product configuration: filter results 1`] = `
Object {
  "cells": Array [
    <Button
      component="a"
      href="/insights/inventory/lorem inventory id/"
      isInline={true}
      target="_blank"
      variant="link"
    >
      lorem
    </Button>,
    <React.Fragment>
      t(curiosity-inventory.hardwareType, [object Object])
       
      <Badge
        isRead={true}
      >
        3
      </Badge>
    </React.Fragment>,
    10,
    "lorem month ago",
  ],
  "columnHeaders": Array [
    "t(curiosity-inventory.header, [object Object])",
    "t(curiosity-inventory.header, [object Object])",
    "t(curiosity-inventory.header, [object Object])",
    "t(curiosity-inventory.header, [object Object])",
  ],
  "data": Object {
    "cores": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": 12,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem",
    },
    "hardwareType": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "ipsum",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem month ago",
    },
    "numberOfGuests": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": 3,
    },
    "sockets": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": 10,
    },
  },
}
`;

exports[`RhelView Component should have default props that set product configuration: initial configuration 1`] = `
Object {
  "initialGraphFilters": Array [
    Object {
      "color": "#06c",
      "fill": "#8bc1f7",
      "id": "physicalSockets",
      "stroke": "#06c",
    },
    Object {
      "color": "#009596",
      "fill": "#a2d9d9",
      "id": "hypervisorSockets",
      "stroke": "#009596",
    },
    Object {
      "color": "#5752d1",
      "fill": "#b2b0ea",
      "id": "cloudSockets",
      "stroke": "#5752d1",
    },
    Object {
      "id": "thresholdSockets",
    },
  ],
  "initialInventoryFilters": Array [
    Object {
      "cell": [Function],
      "id": "displayName",
    },
    Object {
      "cell": [Function],
      "id": "hardwareType",
    },
    Object {
      "id": "sockets",
    },
    Object {
      "id": "lastSeen",
    },
  ],
  "query": Object {
    "granularity": "daily",
    "limit": 10,
    "offset": 0,
  },
}
`;

exports[`RhelView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader
    t={[Function]}
    viewId="RHEL"
  >
    t(curiosity-view.title, [object Object])
  </PageHeader>
  <PageToolbar>
    <Connect(Toolbar)
      query={
        Object {
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
        }
      }
      viewId="RHEL"
    />
  </PageToolbar>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.socketsHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "color": "#5752d1",
            "fill": "#b2b0ea",
            "id": "cloudSockets",
            "stroke": "#5752d1",
          },
          Object {
            "id": "thresholdSockets",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="RHEL"
      query={
        Object {
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
        }
      }
      viewId="RHEL"
    />
  </PageSection>
  <PageSection>
    <Connect(InventoryList)
      cardTitle="t(curiosity-inventory.cardHeading)"
      filterInventoryData={
        Array [
          Object {
            "cell": [Function],
            "id": "displayName",
          },
          Object {
            "cell": [Function],
            "id": "hardwareType",
          },
          Object {
            "id": "sockets",
          },
          Object {
            "id": "lastSeen",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      query={
        Object {
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
        }
      }
      viewId="RHEL"
    />
  </PageSection>
</PageLayout>
`;
